--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,5 +1,6 @@
 .app.dark {
   --bg-color: rgb(38, 48, 87);
+  --inverted-bg-color: rgb(228, 234, 255);
   --main-color: rgb(222, 221, 238);
   --second-color: rgb(79, 79, 255);
 }
