--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,5 +1,6 @@
 .app.light {
-    --bg-color: rgb(228, 234, 255);
-    --main-color: rgb(0, 0, 0);
-    --second-color: rgb(180, 180, 191);
-  }
+  --bg-color: rgb(228, 234, 255);
+  --inverted-bg-color: rgb(38, 48, 87);
+  --main-color: rgb(0, 0, 0);
+  --second-color: rgb(180, 180, 191);
+}
